--- a/package.json
+++ b/package.json
@@ -41,10 +41,16 @@
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "@types/underscore": "^1.8.1",
         "ionic": "3.8.0",
-        "typescript": "2.3.4"
+        "meteor-typings": "^1.4.1",
+        "typescript": "2.3.4",
+        "typescript-extends": "^1.0.1"
     },
     "description": "An Ionic project",
+    "config": {
+        "ionic_webpack": "./webpack.config.js"
+    },
     "cordova": {
         "plugins": {
             "cordova-plugin-console": {},
