--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -11,25 +10,17 @@
     ],
     "module": "commonjs",
     "moduleResolution": "node",
-    "paths": {
-      "api/*": ["./api/server/*"]
-    },
     "sourceMap": true,
     "target": "es5",
     "skipLibCheck": true,
     "stripInternal": true,
     "noImplicitAny": false,
     "types": [
-      "@types/underscore"
+      "meteor-typings"
     ]
   },
-  "include": [
-    "src/**/*.ts",
-    "api/**/*.ts"
-  ],
   "exclude": [
-    "node_modules",
-    "api/node_modules"
+    "node_modules"
   ],
   "compileOnSave": false,
   "atom": {
