--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+        "ionic:serve": "ionic-app-scripts serve",
+        "meteor-client:bundle": "meteor-client bundle -s api"
     },
     "dependencies": {
         "@angular/common": "4.1.3",
@@ -24,6 +25,7 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "babel-runtime": "^6.26.0",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
@@ -34,6 +36,8 @@
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "meteor-node-stubs": "^0.2.11",
+        "meteor-rxjs": "^0.4.7",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
@@ -41,9 +45,11 @@
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "@types/meteor": "^1.4.4",
         "@types/underscore": "^1.8.1",
         "ionic": "3.8.0",
         "meteor-typings": "^1.4.1",
+        "tmp": "0.0.33",
         "typescript": "2.3.4",
         "typescript-extends": "^1.0.1"
     },
